entrega tercera preentrega

--- a/html/productos.html
+++ b/html/productos.html
@@ -5,13 +5,18 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" type="image/png" href="../img/favicon.png">
+  <meta name="description"
+    content="Explora nuestra amplia gama de productos, desde ventanas termopanel de PVC hasta elegantes persianas de aluminio y soluciones en vidrio. Encuentra la opción perfecta para tu proyecto de renovación o construcción">
+  <meta name="keywords"
+    content=" ventanas termopanel PVC, persianas de aluminio, ventanas de PVC, ventanas de aluminio, vidrio templado, vidrio laminado, variedad de ventanas, opciones de persianas.">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
     crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-  <link rel="stylesheet" href="../css/style.css" />
+  <link rel="stylesheet" href="../css/main.css" />
   <title>Cycwin</title>
 </head>
 
@@ -45,9 +50,10 @@
           <img class="card-img-top" src="../img/ventana.jpg" alt="foto de ventana" height="330" />
           <div class="card-body">
             <h5 class="card-title">Ventanas termoacústicas</h5>
-            <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quae, praesentium error,
-              laboriosam numquam dolores voluptates porro a quia aut.</p>
-            <a href="#" class="btn btn-primary">Cotizar</a>
+            <p class="card-text">Diseñadas con tecnología avanzada, reducen el ruido exterior al
+              tiempo que mejoran la eficiencia energética, creando un espacio acogedor y silencioso para ti y tu
+              familia..</p>
+            <a href="#" class="btnCotizar">Cotizar</a>
           </div>
         </div>
       </div>
@@ -56,9 +62,10 @@
           <img class="card-img-top" src="../img/persiana.jpg" alt="foto de persiana" height="330" />
           <div class="card-body">
             <h5 class="card-title">Persiana Metálica</h5>
-            <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quae, praesentium error,
-              laboriosam numquam dolores voluptates porro a quia aut.</p>
-            <a href="#" class="btn btn-primary">Cotizar</a>
+            <p class="card-text">Su diseño metálico proporciona una apariencia moderna y profesional, ideal para locales
+              comerciales. Además, puedes controlar fácilmente la cantidad de luz y ventilación que deseas gracias a su
+              sistema de apertura ajustable. .</p>
+            <a href="#" class="btnCotizar">Cotizar</a>
           </div>
         </div>
       </div>
@@ -67,9 +74,9 @@
           <img class="card-img-top" src="../img/bisagra.jpg" alt="foto de puerta" height="330" />
           <div class="card-body">
             <h5 class="card-title">Cierres, barandas y showerdoor</h5>
-            <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quae, praesentium error,
-              laboriosam numquam dolores voluptates porro a quia aut.</p>
-            <a href="#" class="btn btn-primary">Cotizar</a>
+            <p class="card-text">El vidrio templado es la elección ideal para este entorno, ya que es resistente a la
+              humedad y fácil de limpiar.</p>
+            <a href="#" class="btnCotizar">Cotizar</a>
           </div>
         </div>
       </div>
