--- a/index.html
+++ b/index.html
@@ -5,12 +5,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" href="img/favicon.png">
+    <meta name="description"
+        content="Descubre la excelencia en ventanas termopanel de PVC, persianas de aluminio y trabajos con vidrio. Transforma tu hogar con la mejor calidad y diseño. Bienvenido a nuestro mundo de soluciones para tu espacio">
+    <meta name="keywords"
+        content="ventanas, PVC, aluminio, cierres, showerdoor, termopaneles, renovación de ventanas, ventanas a medida, ventanas modernas">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/main.css" />
     <title>Cycwin</title>
 </head>
 
@@ -39,10 +44,10 @@
         <div id="carouselExampleInterval" class="carousel carousel-dark slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active" data-bs-interval="5000">
-                    <img src="img/banner.png" class="d-block w-100 " alt="banner" />
+                    <img src="img/banner.jpg" class="d-block w-100 " alt="banner" />
                 </div>
                 <div class="carousel-item" data-bs-interval="5000">
-                    <img src="img/proyecto2.jpg" class="d-block w-100" alt="...">
+                    <img src="img/proyecto2.jpeg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item" data-bs-interval="5000">
                     <img src="img/proyecto3.jpg" class="d-block w-100" alt="...">
@@ -65,19 +70,27 @@
                 <div class="col-lg pb-2 ">
                     <h1>Bienvenido a nuestro portal</h1>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod
-                        minima consequatur praesentium optio sequi, ad eveniet rerum quas
-                        distinctio doloribus dolor enim deleniti aspernatur odit, ab iusto
-                        voluptatibus consectetur deserunt. Quod, asperiores est iste quam
-                        quidem commodi dignissimos odio aperiam ut accusantium facilis
-                        error, nam laborum? Minima officiis molestiae totam ratione fugiat,
-                        veritatis omnis sint quibusdam suscipit quos sed sapiente. Accusamus
-                        magnam eveniet aut maiores asperiores. Reprehenderit, facilis!
-                        Optio, eum esse earum fugiat alias sed eaque, molestias tempore
-                        dolorem iusto magni architecto ullam impedit pariatur fugit, id
-                        consectetur commodi quae.
-                    </p>
-                    <h2>¿Qué es un termopanel?</h2>
+                        En nuestro mundo moderno y ruidoso, encontrar soluciones que mejoren la comodidad y la
+                        tranquilidad en tu hogar es esencial. Es por eso que estamos encantados de presentarte nuestra
+                        amplia gama de ventanas termoacústicas diseñadas para brindarte la paz que mereces y la
+                        eficiencia energética que tu hogar necesita.
+
+                        En esta plataforma, descubrirás todo lo que necesitas saber sobre nuestras ventanas
+                        termoacústicas innovadoras y cómo pueden transformar tu espacio. Ya sea que busques reducir el
+                        ruido del tráfico, controlar la temperatura de tu hogar o simplemente mejorar la estética de tus
+                        ventanas, estamos aquí para ayudarte a encontrar la solución perfecta.
+
+
+
+                        En nuestra misión por ofrecerte la mejor calidad y servicio, nuestro equipo de expertos está
+                        siempre a tu disposición para responder tus preguntas y asesorarte en cada paso del camino. Nos
+                        enorgullece ser tu socio confiable en la creación de un ambiente más tranquilo, confortable y
+                        eficiente en tu hogar.
+
+                        Gracias por visitarnos y confiar en nosotros para tus necesidades de ventanas termoacústicas.
+                        ¡Esperamos ayudarte a hacer de tu hogar un lugar aún mejor! </p>
+
+                    <!-- <h2>¿Qué es un termopanel?</h2>
                     <p>
                         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod
                         minima consequatur praesentium optio sequi, ad eveniet rerum quas
@@ -90,7 +103,7 @@
                         Optio, eum esse earum fugiat alias sed eaque, molestias tempore
                         dolorem iusto magni architecto ullam impedit pariatur fugit, id
                         consectetur commodi quae.
-                    </p>
+                    </p> -->
                 </div>
 
                 <div class="col-lg pb-2">
