Actualización de Productos y Contacto (animaciones, scss)

--- a/html/proyectos.html
+++ b/html/proyectos.html
@@ -52,7 +52,7 @@
               capturar las vistas panorámicas del océano, incorporando elementos naturales y materiales resistentes al
               entorno marino.
             </p>
-            <a class="btnVerMas" href="">Ver más</a>
+            <a class="btnVerMas" href="error.html">Ver más</a>
           </div>
         </div>
         <div class="proyecto">
@@ -64,7 +64,7 @@
               de amplitud y luminosidad en el espacio. El vidrio utilizado es seguro y resistente, proporcionando
               seguridad sin sacrificar la estética.
             </p>
-            <a class="btnVerMas" href="">Ver más</a>
+            <a class="btnVerMas" href="error.html">Ver más</a>
           </div>
         </div>
         <div class="proyecto">
@@ -76,7 +76,7 @@
               capturar la majestuosidad del océano, estas ventanas ofrecen panorámicas impresionantes que se convierten
               en obras de arte en sí mismas.
             </p>
-            <a class="btnVerMas" href="">Ver más</a>
+            <a class="btnVerMas" href="error.html">Ver más</a>
           </div>
         </div>
       </div>
