--- a/html/error.html
+++ b/html/error.html
@@ -2,24 +2,17 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" href="../img/favicon.png">
-    <meta name="description"
-        content="Estamos aquí para ayudarte a materializar tus ideas. Ponte en contacto con nosotros para obtener asesoramiento personalizado en ventanas termopanel de PVC, persianas de aluminio y soluciones en vidrio. ¡Hablemos!">
-    <meta name="keywords"
-        content="contacto, consultoría en ventanas, asesoramiento personalizado, presupuesto de ventanas, servicio al cliente, información de contacto, solicitar cotización.">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="icon" type="image/png" href="img/favicon.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Página no encontrada</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
-
     <link rel="stylesheet" href="../css/main.css" />
-    <!-- link animaciones -->
-    <link rel="stylesheet" href="../css/animate.css">
-    <title>Cycwin</title>
 </head>
 
 <body>
@@ -42,26 +35,15 @@
             </div>
         </nav>
     </header>
-    <main id="mainContacto">
-        <h1>Cotiza con nosotros</h1>
-        <form action="" class="wow fadeIn" data-wow-delay="0.2s" data-wow-duration="2s">
-            <h2>Formulario de contacto</h2>
-            <label for="nombre">Nombre</label>
-            <input type="text" id="nombre" />
+    <main>
+        <div class="error">
 
-            <label for="apellido">Apellido</label>
-            <input type="text" id="apellido" />
-
-            <label for="correo">Correo Electrónico</label>
-            <input type="text" id="correo" />
-
-            <label for="mensaje">Mensaje</label>
-            <textarea name="" id="mensaje" cols="30" rows="10"
-                placeholder="Escriba aquí qué tipo de ventana necesita"></textarea>
-
-            <input class="btnFormulario" type="submit" value="Pedir Cotización" />
-            <input class="btnFormulario" type="reset" />
-        </form>
+            <div>
+                <h1>Página no encontrada</h1>
+                <h3>Parece que estás perdido</h3>
+                <a href="../index.html">Volver al home</a>
+            </div>
+        </div>
     </main>
     <footer class="text-center text-white">
         <div class="container pt-4">
@@ -113,11 +95,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js"
         integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa"
         crossorigin="anonymous"></script>
-    <!-- Wow animaciones -->
-    <script src="../js/wow.min.js"></script>
-    <script>
-        new WOW().init();
-    </script>
 </body>
 
 </html>
