--- a/html/productos.html
+++ b/html/productos.html
@@ -16,7 +16,10 @@
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
     crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+  <!-- Link css -->
   <link rel="stylesheet" href="../css/main.css" />
+  <!-- link animaciones -->
+  <link rel="stylesheet" href="../css/animate.css">
   <title>Cycwin</title>
 </head>
 
@@ -42,45 +45,46 @@
   </header>
 
 
-  <main>
+  <main id="mainProductos">
     <h1>Productos</h1>
-    <div class="row">
-      <div class="col-sm-4 pb-4">
-        <div class="card text-center">
-          <img class="card-img-top" src="../img/ventana.jpg" alt="foto de ventana" height="330" />
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+      <div class="col wow fadeIn" data-wow-delay="0.2s" data-wow-duration="2s">
+        <div class="card text-center h-100 cajaProducto">
+          <img src="../img/pvc4.webp" class="card-img-top imgProducto" alt="foto de ventana">
           <div class="card-body">
             <h5 class="card-title">Ventanas termoacústicas</h5>
             <p class="card-text">Diseñadas con tecnología avanzada, reducen el ruido exterior al
               tiempo que mejoran la eficiencia energética, creando un espacio acogedor y silencioso para ti y tu
-              familia..</p>
-            <a href="#" class="btnCotizar">Cotizar</a>
+              familia.</p>
           </div>
+          <a href="contacto.html" class="card-footer btnCotizar">SABER MÁS</a>
         </div>
       </div>
-      <div class="col-sm-4 pb-4">
-        <div class="card text-center">
-          <img class="card-img-top" src="../img/persiana.jpg" alt="foto de persiana" height="330" />
+      <div class="col wow fadeIn " data-wow-delay="0.2s" data-wow-duration="2s">
+        <div class="card text-center h-100 cajaProducto">
+          <img src="../img/metal2.webp" class="card-img-top imgProducto" alt="foto de persiana">
           <div class="card-body">
             <h5 class="card-title">Persiana Metálica</h5>
             <p class="card-text">Su diseño metálico proporciona una apariencia moderna y profesional, ideal para locales
               comerciales. Además, puedes controlar fácilmente la cantidad de luz y ventilación que deseas gracias a su
-              sistema de apertura ajustable. .</p>
-            <a href="#" class="btnCotizar">Cotizar</a>
+              sistema de apertura ajustable.</p>
           </div>
+          <a href="contacto.html" class="card-footer btnCotizar">SABER MÁS</a>
         </div>
       </div>
-      <div class="col-sm-4 pb-4">
-        <div class="card text-center">
-          <img class="card-img-top" src="../img/bisagra.jpg" alt="foto de puerta" height="330" />
+      <div class="col wow fadeIn" data-wow-delay="0.2s" data-wow-duration="2s">
+        <div class="card text-center h-100 cajaProducto">
+          <img src="../img/vidrio2.webp" class="card-img-top imgProducto" alt="foto de puerta">
           <div class="card-body">
             <h5 class="card-title">Cierres, barandas y showerdoor</h5>
             <p class="card-text">El vidrio templado es la elección ideal para este entorno, ya que es resistente a la
               humedad y fácil de limpiar.</p>
-            <a href="#" class="btnCotizar">Cotizar</a>
           </div>
+          <a href="contacto.html" class="card-footer btnCotizar">SABER MÁS</a>
         </div>
       </div>
     </div>
+
   </main>
 
   <footer class="text-center text-white">
@@ -126,12 +130,18 @@
       <a class="text-white" href="/">www.cycwin.com</a>
     </div>
   </footer>
+  <!-- Bootstrap  -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
     integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
     crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js"
     integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa"
     crossorigin="anonymous"></script>
+  <!-- Wow animaciones -->
+  <script src="../js/wow.min.js"></script>
+  <script>
+    new WOW().init();
+  </script>
 </body>
 
 </html>
