Actualización de Proyetos y Quienes somos (animaciones, scss)

--- a/html/productos.html
+++ b/html/productos.html
@@ -62,7 +62,7 @@
       </div>
       <div class="col wow fadeIn " data-wow-delay="0.2s" data-wow-duration="2s">
         <div class="card text-center h-100 cajaProducto">
-          <img src="../img/metal2.webp" class="card-img-top imgProducto" alt="foto de persiana">
+          <img src="../img/metal.webp" class="card-img-top imgProducto" alt="foto de persiana">
           <div class="card-body">
             <h5 class="card-title">Persiana Metálica</h5>
             <p class="card-text">Su diseño metálico proporciona una apariencia moderna y profesional, ideal para locales
