--- a/html/proyectos.html
+++ b/html/proyectos.html
@@ -16,6 +16,8 @@
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
     crossorigin="anonymous"></script>
   <link rel="stylesheet" href="../css/main.css" />
+  <!-- link animaciones -->
+  <link rel="stylesheet" href="../css/animate.css">
   <title>Cycwin</title>
 </head>
 
@@ -43,10 +45,10 @@
     <h1>Proyectos Realizados</h1>
     <main>
       <div class="contenedorProyectos">
-        <div class="proyecto">
+        <div class="proyecto  wow fadeInRight" data-wow-delay="0.2s" data-wow-duration="2s">
           <img class="imgProyecto" src="../img/proyecto1.jpg" alt="foto casa en la playa" />
           <div class="textoProyecto">
-            <h3>Proyecto 1</h3>
+            <h3>Proyecto Playa Tunquen</h3>
             <p>
               Nuestro proyecto junto al mar es un oasis de tranquilidad y belleza. Esta casa se ha diseñado para
               capturar las vistas panorámicas del océano, incorporando elementos naturales y materiales resistentes al
@@ -55,10 +57,9 @@
             <a class="btnVerMas" href="error.html">Ver más</a>
           </div>
         </div>
-        <div class="proyecto">
-          <img class="imgProyecto" src="../img/proyecto2.jpeg" alt="foto escalera con cubierta de vidrio" />
-          <div class="textoProyecto">
-            <h3>Proyecto 2</h3>
+        <div class="proyecto wow fadeInLeft" data-wow-delay="0.2s" data-wow-duration="2s">
+          <div class="textoProyecto  text-end">
+            <h3>Proyecto lucarna terraza</h3>
             <p>
               Esta escalera, que incorpora un techo de vidrio, permite la entrada de luz natural, creando una sensación
               de amplitud y luminosidad en el espacio. El vidrio utilizado es seguro y resistente, proporcionando
@@ -66,11 +67,12 @@
             </p>
             <a class="btnVerMas" href="error.html">Ver más</a>
           </div>
+          <img class="imgProyecto" src="../img/proyecto2.jpeg" alt="foto escalera con cubierta de vidrio" />
         </div>
-        <div class="proyecto">
-          <img class="imgProyecto" src="../img/proyecto3.jpg" alt="ventanas de vidrio con vista al mar" />
+        <div class="proyecto wow fadeInRight" data-wow-delay="0.2s" data-wow-duration="2s">
+          <img class="imgProyecto" src="../img/proyecto4.jpg" alt="ventanas de vidrio con vista al mar" />
           <div class="textoProyecto">
-            <h3>Proyecto 3</h3>
+            <h3>Proyecto parcela Algarrobo</h3>
             <p>
               Nuestro proyecto de ventanas de vidrio con vista al mar es un tributo a la belleza natural. Diseñado para
               capturar la majestuosidad del océano, estas ventanas ofrecen panorámicas impresionantes que se convierten
@@ -131,6 +133,11 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js"
     integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa"
     crossorigin="anonymous"></script>
+  <!-- Wow animaciones -->
+  <script src="../js/wow.min.js"></script>
+  <script>
+    new WOW().init();
+  </script>
 </body>
 
 </html>
